testsuite/tests/partial-sigs/should_fail/WildcardInForeignImport.stderr

WildcardInForeignImport.hs:6:48: error: [GHC-65507]
    Wildcard ‘_’ not allowed
      in the foreign declaration for ‘c_sin’
